--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build Docker image
         run: |
           ls -la
-          docker build -t dckrimg .
+          docker build -t mamba .
         working-directory: ./
 
       - name: Run Docker image (train process)
