--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -9,7 +9,7 @@ on:
       epochs:
         description: 'Epochs'
         required: true
-        default: '1'
+        default: 1
 jobs:
   train:
     runs-on: ubuntu-latest
@@ -28,3 +28,14 @@ jobs:
       - name: Run Docker image (train process)
         run: |
           docker run mamba python src/main.py  -e=${{ github.event.inputs.epochs }} 
+
+      - name: Copy model.pt
+        run: |
+          docker cp $(docker ps -lq):results/model.pt .
+      
+  test:
+    runs-on: ubuntu-latest
+    needs: train
+    steps:
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
