--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -9,7 +9,8 @@ on:
       epochs:
         description: 'Epochs'
         required: true
-        default: "1"
+        type: number
+        default: 1
 jobs:
   train:
     runs-on: ubuntu-latest
@@ -24,6 +25,7 @@ jobs:
         run: |
           echo ${{ github.event.inputs.epochs }}
           echo "${{ github.event.inputs.epochs }}"
+          echo "${{ inputs.epochs }}"
           docker build -t mamba .
         working-directory: ./
 
@@ -33,6 +35,8 @@ jobs:
 
       - name: Copy model.pt
         run: |
+
+
           docker cp $(docker ps -lq):results/model.pt .
       
   test:
