--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -65,6 +65,6 @@ jobs:
       - name: Build Docker image
         run: |
           docker build -t mamba .
-          docker cp model.pt $(docker ps -lq):app/results/model.pt
+          docker cp model.pt $(docker ps -lq):results/model.pt
           docker run mamba python src/main.py --test --data_len=100
         working-directory: ./
