--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -59,13 +59,18 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: model
+          name: modell
           path: ./
 
       - name: Build Docker image
         run: |
-          docker build -t mamba .
-          docker run mamba
-          docker cp model.pt $(docker ps -lq):results/model.pt
-          docker exec -it $(docker ps -lq) python src/main.py --test --data_len=100
+          docker build -t mamba 
+          
+      - name: Run Docker container
+        run: docker run -d --name mambaContainer mamba sleep infinity  
+        
+      - name: Copy model and test it
+        run: |
+          docker cp model.pt mambaContainer:results/model.pt
+          docker exec mambaContainer python src/main.py --test --data_len=100
         working-directory: ./
