--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -1,16 +1,16 @@
 name: IUM s424714
 
 on:
-  push:
-    branches:
-      - master
   workflow_dispatch:
     inputs:
       epochs:
         description: 'Epochs'
         required: true
-#         type: number
-        default: "1"
+        type: number
+        default: 1
+#   push:
+#     branches:
+#       - master
 
 jobs:
   train:
