--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v3
         with:
-          name: modell
+          name: model
           path: ./
 
       - name: Build Docker image
