--- a/.github/workflows/ium.yml
+++ b/.github/workflows/ium.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t mamba 
+          docker build -t mamba .
           
       - name: Run Docker container
         run: docker run -d --name mambaContainer mamba sleep infinity  
